Updated 2017-04-12-on-box-telemetry-running-pipeline-and-kafka-on-ios-xr.md